<resources>
    <string name="app_name">Smart Budget Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="target">Target</string>
    <string name="target_value">5000</string>
    <string name="add_new_goal">Add new goal!</string>
    <string name="progress">Well done! You are on Track</string>
    <string name="title_activity_login_page">LoginPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Smart Budget Tracker</string>
    <string name="username">Username</string>
    <string name="login">LOG-IN</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="blogin">Login</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up"><u>Sign-up</u></string>
    <string name="tip_try_to_save_200_this_week">Tip: Try to save 200 this week</string>
    <string name="balance_10_000">Balance 10,000</string>
    <string name="your_progress">Your Progress</string>
    <string name="your_target">Your Target</string>
    <string name="Income">Income</string>
    <string name="IncomeUnderline"><u><b>Income</b></u></string>
    <string name="Expense">Expense</string>
    <string name="ExpneseUnderline"><u><b>Expense</b></u></string>
    <string name="select_category">Select Category</string>
    <string name="brings_the_category_topdown">BRINGS THE CATEGORY TOPDOWN</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="add_amount">Add Amount</string>
    <string name="add_bill">Add Bill</string>
    <string name="add">Add</string>
    <string name="settings">SETTINGS</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string-array name="Categories">
        <item>Food</item>
        <item>Travel</item>
        <item>Groceries</item>
        <item>Entertainment</item>
        <item>Shopping</item>
        <item>Rent</item>
        <item>Health Care</item>
        <item>Others</item>
    </string-array>
</resources>