<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/our_grey"
    tools:context=".LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/login_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="45dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/our_grey"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="350dp"
        android:layout_height="507dp"
        android:layout_marginStart="45dp"

        android:layout_marginEnd="45dp"
        android:layout_marginBottom="96dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:text="@string/login"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/our_purple"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/t2"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/t1"
                android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="40dp"
                android:text="@string/username"
                android:textColor="@color/our_purple"
                android:textSize="23sp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/e1"
                android:layout_width="match_parent"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/t2"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="7dp"
                android:hint="@string/enter_your_username"
                android:shadowColor="@color/our_purple"
                android:autofillHints="username"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/e1"
                android:layout_marginStart="25dp"
                android:layout_marginTop="7dp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/our_purple"
                android:text="@string/password"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:id="@+id/e2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t3"
                android:layout_marginEnd="25dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="7dp"
                android:hint="@string/enter_your_password"
                android:autofillHints="password"
                android:inputType="text"
                />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/e2"
                app:layout_constraintEnd_toEndOf="@+id/e2"
                android:layout_marginStart="25dp"
                android:layout_marginTop="7dp"
                android:text="@string/forgot_your_password"
                android:textColor="@color/our_purple"
                android:textSize="20dp"
                android:textStyle="bold"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/t4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="39dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/blogin"
                android:textColor="@color/our_grey"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="50dp"
                android:layout_marginTop="7dp"
                android:textColor="@color/our_purple"
                android:text="@string/dont_have_an_account"
                android:textSize="18sp"
                android:textStyle="italic|bold"/>

            <TextView
                android:id="@+id/t6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                app:layout_constraintStart_toEndOf="@id/t5"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/our_purple"
                android:textSize="17sp"
                android:textStyle="italic|bold"

                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>